addons/kube-prometheus-stack/workload/ingress-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
  - port: 80
    targetPort: nginx-port    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
spec:
  ingressClassName: nginx-external
  rules:
  - http:
      paths:
      - backend:
          service:
            name: web-svc
            port:
              number: 80
        path: /custom-path
        pathType: Prefix
